task8/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: final-exam
  name: final-exam-cluster-ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: final-exam
