task8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: final-exam-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: asilbek.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam-cluster-ip
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
